# escli

./: Cargo.toml  LICENSE.md  README.md  config.example.yaml  example-index-settings.json  example-mapping.json  start_es.sh
src/: application.rs  config.rs  macros.rs  main.rs  ui_app.rs
src/commands/: aliases.rs  aliases_add.rs  aliases_list.rs  aliases_remove.rs  aliases_update.rs  indices.rs  indices_close.rs  indices_create.rs  indices_delete.rs  indices_list.rs  indices_open.rs  indices_settings.rs  indices_settings_get.rs  mappings.rs  mappings_get.rs  mod.rs  reindex.rs
src/utils/: handle_response.rs  mod.rs  output.rs
