[package]
name = "escli"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A CLI for interacting with Elasticsearch (You Know, for Search)"
readme = "README.md"
homepage = "https://github.com/fabriceclementz/escli"
repository = "https://github.com/fabriceclementz/escli"

[[bin]]
name = "escli"
path = "src/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2.5", features = ["derive"] }
log = "0.4.17"
pretty_env_logger = "0.4.0"
tokio = { version = "1.28.0", features = ["full"] }
